--- a/an-identity-aws/an-identity-aws-impl/pom.xml
+++ b/an-identity-aws/an-identity-aws-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.autonubil.identity</groupId>
 		<artifactId>an-identity-aws</artifactId>
-		<version>0.1.29-SNAPSHOT</version>
+		<version>0.1.29</version>
 	</parent>
 	<artifactId>an-identity-aws-impl</artifactId>
 	<dependencies>
