--- a/an-identity-app/pom.xml
+++ b/an-identity-app/pom.xml
@@ -164,7 +164,7 @@
 		<dependency>
 			<groupId>com.autonubil.identity</groupId>
 			<artifactId>an-identity-aws-impl</artifactId>
-			<version>0.1.29-SNAPSHOT</version>
+			<version>0.1.29</version>
 		</dependency>
 
 <!--
