--- a/an-identity-audit/an-identity-audit-api/pom.xml
+++ b/an-identity-audit/an-identity-audit-api/pom.xml
@@ -6,7 +6,7 @@
 
     
 
-    <version>0.1.34</version>
+    <version>0.1.35-SNAPSHOT</version>
 
   </parent>
   <artifactId>an-identity-audit-api</artifactId>
