--- a/an-identity-secrets/pom.xml
+++ b/an-identity-secrets/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.autonubil.identity</groupId>
     <artifactId>an-identity</artifactId>
-    <version>0.1.34</version>
+    <version>0.1.35-SNAPSHOT</version>
   </parent>
   <artifactId>an-identity-secrets</artifactId>
   <packaging>pom</packaging>
