--- a/an-identity-aws/an-identity-aws-api/pom.xml
+++ b/an-identity-aws/an-identity-aws-api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.autonubil.identity</groupId>
     <artifactId>an-identity-aws</artifactId>
-    <version>0.1.35</version>
+    <version>0.1.36-SNAPSHOT</version>
   </parent>
   <artifactId>an-identity-aws-api</artifactId>
 </project>
